More alignment fixes...

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -384,3 +384,7 @@ body {
     width: 547px;
     margin-bottom: 5px;
 }
+
+.help-inline {
+    margin-top: 5px;
+}
